--- a/firefox/game/index.html
+++ b/firefox/game/index.html
@@ -11,27 +11,14 @@
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
-		<audio id="audRed">
-			<source src="../audio/red.ogg" type="audio/ogg"/>
-		</audio>
-		<audio id="audBlue">
-			<source src="../audio/blue.ogg" type="audio/ogg"/>
-		</audio>
-		<audio id="audYellow">
-			<source src="../audio/yellow.ogg" type="audio/ogg"/>
-		</audio>
-		<audio id="audGreen">
-			<source src="../audio/green.ogg" type="audio/ogg"/>
-		</audio>
-		
-		<button id="btnGreen" disabled></button><button id="btnRed" disabled></button>
+		<button id="button-green" data-color="green" disabled></button><button id="button-red" data-color="red" disabled></button>
 		<br>
-		<button id="btnBlue" disabled></button><button id="btnYellow" disabled></button>
+		<button id="button-blue" data-color="blue" disabled></button><button id="button-yellow" data-color="yellow" disabled></button>
 		<br>
-		<span id="round"></span>
+		<span id="text-round"></span>
 		<br>
-		<button id="btnStart">PLAY</button>
-		<img src="../images/audioon.png" title="Turn audio off" id="audioToggle" />
+		<button id="button-start">Play</button>
+		<img src="../images/audioon.png" title="Turn audio off" id="button-audio">
 		<script src="script.js"></script>
 	</body>
 </html>
