--- a/firefox/game/index.html
+++ b/firefox/game/index.html
@@ -7,7 +7,7 @@
 	<head>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<title>Simon for Firefox</title>
+		<title data-i18n="extensionName"></title>
 		<link rel="stylesheet" href="style.css"/>
 	</head>
 	<body>
@@ -17,8 +17,9 @@
 		<br>
 		<span id="text-round"></span>
 		<br>
-		<button id="button-start">Play</button>
-		<img src="../images/audioon.png" title="Turn audio off" id="button-audio">
+		<button id="button-start" data-i18n="actionPlay"></button>
+		<img src="../images/audioon.png" id="button-audio">
+		<script src="../lib/i18n.js"></script>
 		<script src="script.js"></script>
 	</body>
 </html>
